Changes in Landing Page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <button class="hero__container--btn"><a href="#">Sign Up</a></button>
             </div>
             <div class="hero__container--right">
-                <img src="https://www.freepnglogos.com/uploads/transformers-png/new-transformers-wallpaper-image-png-zeromin-0.png"
+                <img src="images/pp.png"
                     alt="alien" class="hero__container--img" />
             </div>
         </div>
